<resources>
    <string name="app_name">Gold Market</string>
    <string name="splash_logo">Splash_Logo</string>
    <string name="tagline">Awesome App for Gold Transaction</string>
    <string name="login_text">Sign In to Continue</string>
    <string name="login_slogan">Hello There, Welcome Back</string>
    <string name="placeholder_username">Username</string>
    <string name="placeholder_password">Password</string>
    <string name="text_forget_password">Forget Password?</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_new_user_sign_up">Dont have an account?</string>
    <string name="text_slogan_register">Register New Account</string>
    <string name="text_register_title">Sign Up</string>
    <string name="placeholder_email">Email</string>
    <string name="text_have_account_register">Already have an account?</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_onboard_slogan">Deposit Your Gold Here!</string>
    <string name="btn_get_started">Get Started</string>
    <string name="slogan_forget_password">Forget Password</string>
    <string name="text_confirm">Confirm</string>
    <string name="forget_description">Enter your e-mail so we can send you a password reset link.</string>
    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_setting">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_first_name">First Name</string>
    <string name="placeholder_last_name">Last Name</string>
    <string name="text_terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="text_profile_picture">Profile Picture</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="full_name">Full Name</string>
    <string name="text_password_amp_pin"><![CDATA[Password & PIN]]></string>
    <string name="text_security">Security</string>
    <string name="arrow_right">arrow-right</string>
    <string name="term_desc_text">Agreement to terms</string>
    <string name="pic_desc_text">Name, Email, Number, Address</string>
    <string name="pic_information_text">PIC Information</string>
    <string name="terms_and_conditions_text">Terms and Conditions</string>
    <string name="additional_information_text">Additional Information</string>
    <string name="additional_desc_text">Legal Document</string>
    <string name="greeting_text_home">Hi, Name</string>
    <string name="change_pocket_btn">Change Pocket</string>
    <string name="create_pocket_btn">Create Pocket</string>
    <string name="gram_text">10 grams</string>
    <string name="total_price_text">Rp. 9.000.000</string>
    <string name="total_pocket">Your Total Pockets : 1</string>
    <string name="pocket_text">Gold\'s Pocket</string>
    <string name="product_transaction_title">Product Transaction</string>
    <string name="history_image">History Image</string>
    <string name="product_name_text">Product Name</string>
    <string name="price_product_history">Rp. 250.000</string>
    <string name="date_product_text">21 March 2021</string>
    <string name="logout_text">Logout</string>
    <string name="menu_pocket">Pocket</string>
  <string name="pocket_name">Pocket Name</string>
  <string name="pocket_price">Rp. 500.000</string>
  <string name="edit_pocket">Edit Pocket</string>
  <string name="delete_pocket">Delete Pocket</string>
  <string name="pocketQty">10 gr</string>
</resources>
