<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".activities.LoginActivity"
  android:orientation="vertical"
  android:padding="20dp"
  android:focusable="true"
  android:focusableInTouchMode="true"
  android:clickable="true"
  android:background="#fff">

  <ImageView
    android:layout_marginTop="40dp"
    android:id="@+id/logo_image"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:src="@drawable/logo_icon"
    android:layout_gravity="center"
    android:contentDescription="@string/splash_logo" />

  <TextView
    android:id="@+id/logo_name"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:text="@string/login_slogan"
    android:layout_marginTop="-20dp"
    android:fontFamily="@font/dancing_bold"
    android:layout_gravity="center"
    android:textAlignment="center"
    android:textSize="40sp"/>

  <TextView
    android:id="@+id/slogan_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    android:layout_gravity="center"
    android:text="@string/login_text"
    android:fontFamily="@font/nunitosans_semibold"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/email_login"
      android:fontFamily="@font/nunitosans_regular"
      android:hint="@string/placeholder_email"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

      <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/password_login"
      android:hint="@string/placeholder_password"
      app:passwordToggleEnabled="true"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

      <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunitosans_regular"
        android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
      android:id="@+id/btn_forget"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="#00000000"
      android:textColor="@color/black"
      android:fontFamily="@font/nunitosans_black"
      android:text="@string/text_forget_password"
      android:textAlignment="textEnd"
      android:layout_gravity="end"
      android:layout_margin="5dp"
      android:elevation="0dp"/>

    <Button
      android:id="@+id/btn_sign_in"
      style="@style/MaterialButtonStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/text_sign_in"
      android:enabled="true"
      android:textColor="@color/black"
      android:fontFamily="@font/nunitosans_bold"/>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="20dp"
      android:orientation="horizontal">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:textColor="@color/black"
        android:fontFamily="@font/nunitosans_regular"
        android:text="@string/text_new_user_sign_up"
        android:layout_gravity="center"
        android:clickable="true"
        android:elevation="0dp"/>
      <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:layout_marginStart="4dp"
        android:textColor="@color/yellow_darker"
        android:fontFamily="@font/nunitosans_bold"
        android:text="@string/text_register_title"
        android:layout_gravity="center"
        android:clickable="true"
        android:elevation="0dp"/>
    </LinearLayout>

  </LinearLayout>
</LinearLayout>
