<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".LoginActivity"
  android:orientation="vertical"
  android:padding="20dp"
  android:background="#fff">

  <ImageView
    android:layout_marginTop="40dp"
    android:id="@+id/logo_image"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:src="@drawable/logo_icon"
    android:layout_gravity="center"
    android:contentDescription="@string/splash_logo" />

  <TextView
    android:id="@+id/logo_name"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:text="@string/text_slogan_register"
    android:layout_marginTop="-20dp"
    android:fontFamily="@font/dancing_bold"
    android:layout_gravity="center"
    android:textAlignment="center"
    android:textSize="40sp"/>

  <TextView
    android:id="@+id/slogan_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    android:layout_gravity="center"
    android:text="@string/text_register_title"
    android:fontFamily="@font/nunitosans_semibold"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/email"
      android:fontFamily="@font/nunitosans_regular"
      android:hint="@string/placeholder_email"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

      <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/username"
      android:fontFamily="@font/nunitosans_regular"
      android:hint="@string/placeholder_username"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

      <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/password"
      android:hint="@string/placeholder_password"
      app:passwordToggleEnabled="true"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

      <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunitosans_regular"
        android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/text_register_title"
      android:layout_marginTop="20dp"
      android:backgroundTint="@color/yellow_dark"
      android:textColor="@color/black"
      android:fontFamily="@font/nunitosans_bold"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="#00000000"
      android:textColor="@color/black"
      android:fontFamily="@font/nunitosans_regular"
      android:text="@string/text_have_account_register"
      android:layout_gravity="center"
      android:layout_marginTop="30dp"
      android:clickable="true"
      android:elevation="0dp"/>

  </LinearLayout>
</LinearLayout>
