<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".presentation.ui.OnBoardingFragment"
  android:background="#FFE96F">

  <ImageView
    android:id="@+id/onboarding_logo"
    android:layout_width="403dp"
    android:layout_height="330dp"
    android:layout_marginTop="20dp"
    android:contentDescription="@string/splash_logo"
    android:src="@drawable/logo_onboarding"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/logo_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:fontFamily="@font/nunitosans_extrabold"
    android:textColor="@color/main_gray"
    android:textSize="42sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/onboarding_logo"
    android:text="@string/text_welcome" />

  <TextView
    android:id="@+id/slogan_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/nunitosans_extrabold"
    android:textColor="@color/main_gray"
    android:textSize="18sp"
    android:textStyle="normal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/logo_text"
    android:text="@string/text_onboard_slogan" />

  <Button
    android:id="@+id/btn_get_started"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/btn_get_started"
    app:layout_constraintTop_toBottomOf="@+id/slogan_text"
    android:backgroundTint="@color/white"
    android:textColor="@color/black"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="40dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
