<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>
    <variable name="fragment"
      type="com.mkamilmistar.gold_market.ui.login.LoginFragment" />

    <variable name="viewmodel"
      type="com.mkamilmistar.gold_market.ui.login.LoginViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.login.LoginFragment">

    <ImageView
      android:id="@+id/logo_image"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:layout_gravity="center"
      android:layout_marginTop="28dp"
      android:contentDescription="@string/splash_logo"
      android:src="@drawable/logo_icon"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/logo_name"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:fontFamily="@font/dancing_bold"
      android:text="@string/login_slogan"
      android:textAlignment="center"
      android:textSize="40sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/logo_image" />

    <TextView
      android:id="@+id/slogan_login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="12dp"
      android:fontFamily="@font/nunitosans_semibold"
      android:text="@string/login_text"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="@+id/logo_name"
      app:layout_constraintHorizontal_bias="0.503"
      app:layout_constraintStart_toStartOf="@+id/logo_name"
      app:layout_constraintTop_toBottomOf="@+id/logo_name" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/slogan_login">

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunitosans_regular"
        android:hint="@string/placeholder_email">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/loginEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder_password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/loginPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/nunitosans_regular"
          android:inputType="textPassword" />
      </com.google.android.material.textfield.TextInputLayout>

      <Button
        android:id="@+id/btn_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:background="#00000000"
        android:elevation="0dp"
        android:fontFamily="@font/nunitosans_black"
        android:text="@string/text_forget_password"
        android:textAlignment="textEnd"
        android:textColor="@color/black" />

      <Button
        android:id="@+id/btn_sign_in"
        style="@style/MaterialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:fontFamily="@font/nunitosans_bold"
        android:text="@string/text_sign_in"
        android:onClick="@{() -> fragment.login()}"
        android:textColor="@color/black" />

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:background="#00000000"
          android:clickable="true"
          android:elevation="0dp"
          android:fontFamily="@font/nunitosans_regular"
          android:text="@string/text_new_user_sign_up"
          android:textColor="@color/black" />

        <TextView
          android:id="@+id/text_sign_up"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginStart="4dp"
          android:background="#00000000"
          android:clickable="true"
          android:elevation="0dp"
          android:fontFamily="@font/nunitosans_bold"
          android:text="@string/text_register_title"
          android:textColor="@color/yellow_darker" />
      </LinearLayout>

    </LinearLayout>

    <ProgressBar
      android:id="@+id/progressBarLogin"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:theme="@style/progressBarYellow"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
