<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".fragments.ForgetPasswordFragment"
  android:orientation="vertical"
  android:padding="20dp"
  android:focusable="true"
  android:focusableInTouchMode="true"
  android:clickable="true"
  android:background="#fff">


  <TextView
    android:id="@+id/logo_name"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:text="@string/slogan_forget_password"
    android:fontFamily="@font/dancing_bold"
    android:layout_gravity="center"
    android:textAlignment="center"
    android:layout_marginTop="80dp"
    android:textSize="40sp"/>

  <TextView
    android:id="@+id/slogan_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="16sp"
    android:paddingHorizontal="16dp"
    android:layout_gravity="center"
    android:text="@string/forget_description"
    android:textAlignment="center"
    android:fontFamily="@font/nunitosans_semibold"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/email"
      android:fontFamily="@font/nunitosans_regular"
      android:layout_marginTop="20dp"
      android:hint="@string/placeholder_email"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

      <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dip"
      android:layout_weight="1"
      android:gravity="center|bottom"
      android:orientation="vertical" >
      <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_confirm"
        android:layout_gravity=""
        android:backgroundTint="@color/yellow_dark"
        android:textColor="@color/black"
        android:fontFamily="@font/nunitosans_bold"/>
    </LinearLayout>


  </LinearLayout>
</LinearLayout>
