<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.cardview.widget.CardView
    android:id="@+id/cardItemPocket"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingHorizontal="5dp"
      android:paddingVertical="10dp">

      <ImageView
        android:id="@+id/picture_pocket"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/history_image"
        android:src="@drawable/gold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/pocket_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/nunitosans_extrabold"
        android:text="@string/pocket_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/picture_pocket"
        app:layout_constraintStart_toEndOf="@+id/picture_pocket"
        app:layout_constraintTop_toTopOf="@+id/picture_pocket"
        app:layout_constraintVertical_bias="0.3" />

      <TextView
        android:id="@+id/pocketQtyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunitosans_regular"
        android:text="@string/pocketQty"
        android:textColor="#707070"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/pocket_name_text"
        app:layout_constraintTop_toBottomOf="@+id/pocket_name_text"
        tools:ignore="SmallSp" />

      <ImageButton
        android:id="@+id/btnDeletePocket"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/yellow"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete"
        android:contentDescription="@string/delete_pocket" />

      <ImageButton
        android:id="@+id/btnEditPocket"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/yellow"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toBottomOf="@+id/btnDeletePocket"
        app:layout_constraintEnd_toStartOf="@+id/btnDeletePocket"
        app:layout_constraintTop_toTopOf="@+id/btnDeletePocket"
        app:srcCompat="@drawable/ic_edit"
        android:contentDescription="@string/edit_pocket" />


    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
